# esclavizador

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: apiclient-check.yml  deploy.yml  terraform-apply.yml  terraform-plan.yml
.husky/: pre-commit
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  openapi.json  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  projects.py  reports.py  tags.py  tasks.py  time_entries.py  users.py
backend/app/core/: config.py  database.py  logging_config.py  security.py
backend/app/domain/: __init__.py  constants.py  entities.py
backend/app/models/: __init__.py  organization.py  project.py  refresh_token.py  tag.py  task.py  time_entry.py  user.py
backend/app/repositories/: base.py  organization_repo.py  project_repo.py  refresh_token_repo.py  tag_repo.py  task_repo.py  time_entry_repo.py  user_repo.py
backend/app/schemas/: auth.py  project.py  tag.py  task.py  time_entry.py  user.py
backend/app/services/: auth_service.py  project_service.py  tag_service.py  task_service.py  time_tracking_service.py  user_service.py
backend/migrations/models/: 0_20251114002440_init.py  0_20251116172856_init.py  1_20251115164138_add_refresh_tokens_and_org_unique_constraint.py  1_20251118002155_add_project_color.py  2_20251116000000_make_task_id_nullable.py
backend/scripts/: export_openapi.py  generate_sample_data.py
backend/tests/: README.md  conftest.py
backend/tests/test_api/: test_auth.py  test_projects.py  test_tags.py  test_tasks.py  test_time_entries.py
backend/tests/test_repositories/: test_organization_repo.py  test_project_repo.py  test_refresh_token_repo.py  test_tag_repo.py  test_task_repo.py  test_time_entry_repo.py  test_user_repo.py
backend/tests/test_services/: test_auth_service.py  test_project_service.py  test_tag_service.py  test_task_service.py  test_time_tracking_service.py
frontend/esclavizador/: .env.example  .firebaserc  firebase.json  next.config.ts  package-lock.json  package.json
frontend/esclavizador/app/: globals.css  layout.tsx  page.tsx
frontend/esclavizador/app/login/: page.tsx
frontend/esclavizador/app/projects/: page.tsx
frontend/esclavizador/app/reports/: page.tsx
frontend/esclavizador/app/users/: page.tsx
frontend/esclavizador/components/: account-settings-dialog.tsx  analytics.tsx  daily-timeline.tsx  edit-entry-dialog.tsx  empty-state.tsx  manual-entry-dialog.tsx  project-list.tsx  protected-route.tsx  recent-activity.tsx  search-input.tsx  settings-dialog.tsx  sidebar.tsx  time-entries.tsx  time-tracker.tsx  user-list.tsx
frontend/esclavizador/components/ui/: password-input.tsx
frontend/esclavizador/contexts/: auth-context.tsx
frontend/esclavizador/hooks/: use-auth.ts  use-projects.ts  use-reports.ts  use-tasks.ts  use-time-entries.ts  use-timer.ts  use-users.ts
frontend/esclavizador/lib/api/: client.ts  refresh-handler.ts
terraform/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
